no real changes, todo list has new notes in it

--- a/brands_app/ToDo
+++ b/brands_app/ToDo
@@ -1,3 +1,12 @@
-Get climate data on companies
+Add legistlators, etc to API
 
-Add legislators and donors
+Make login/logout work
+
+Scrape donations info
+
+Searchbar search for brand/company
+
+Tabs?
+
+companies
+brands
