--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,15 @@
-Get climate data on companies - done except for some missing info
+!IMPORTANT
 
-Add legislators and donors - Lorenzo WIP
+
+Get/Organize climate data on companies - done except for some missing info
+Legislation for climate
+
+scrape coke and p&g donor lists https://www.opensecrets.org/orgs/recips.php?id=D000000212&cycle=2020
+
+
+
+!LESS IMPORTANT
+
+Finish brand parsing
+Images for legislators
+CSS
